[package]
name = "aoc2024"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit-vec = "0.8"
fxhash = "0.2"
glam = "0.29"
parse-display = "0.10"
smallvec = "1.13"

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
