[package]
name = "aoc2024"
version = "0.1.0"
edition = "2021"
default-run = "aoc2024"

[dependencies]
aho-corasick = "1"
bit-vec = "0.8"
crossterm = "0.28"
glam = "0.29"
rustc-hash = "2"
smallvec = "1.13"

[dev-dependencies]
criterion = "0.5"

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"

[[bench]]
name = "bench"
harness = false
